2017-01-01 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/: more error checking and several improvements to
    the manual

2017-12-29 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.xml.in: more entities to extend documentation
    * doc/xml/intro.xml: introduction revised and extended
    * doc/xml-2: files used to generate the manual removed or moved into doc/xml
    * doc/rivet.css: changed color palette

2017-12-22 Massimo Manghi <mxmanghi@apache.org>
    * doc/: more changes to manual pages

2017-11-29 Massimo Manghi <mxanghi@apache.org>
    * NOTICE, README: expanded and obsolete information amended 

2017-10-31 Massimo Manghi <mxmanghi@apache.org>
    * merging branch cmake back into trunk
    * tests/broken.test: the error message form has changed with
    the Tcl based new request handling procedure

2017-10-28 Massimo Manghi <mxmanghi@apache.org>
    * docs/xml/cmake.xml: draft manual page for cmake build system

2017-10-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: Following Jeff Lawson's suggestion we check
    if init.tcl is loaded from within mod_rivet. If we're not running
    from it we don't divert the [exit] command 
    * src/librivet/rivetPkgInit.c: removing code kept in the file 
    that had been commented because not needed. 

2017-10-18 Massimo Manghi <mxmanghi@apache.org>
    * doc/: add new cmake.xml file, further manual developments

2017-10-12 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/mod_rivet.c: add preprocessor test on
    variable declaration for the WIN32 build
    * src/librivet/rivetWWW.c: fixed subtle buffer overflow
    mistakenly assuming snprintf printed a byte less than
    * doc/xml/processing.xml,command.xml: further elaboration of the
    Rivet 3.0 manual. Update ::rivet::redirect manual entry
    * tcl/rivet-tcl/redirect.tcl: now handling generic boolean arguments
    or any integer > 0 (as for the HTTP status codes)

2017-09-17 Massimo Manghi <mxmanghi@apache.org>